cabal-version:      3.0
name:               mu
version:            0.1.0.0
synopsis:
license:            MIT
license-file:       LICENSE
author:             Rose
maintainer:         71909018+Xenovia02@users.noreply.github.com
category:           Language
extra-source-files:
    README.md

common base-depends
    build-depends:
        base >= 4.14.3.0
    default-language:
        Haskell2010
    default-extensions:
        BangPatterns,
        LambdaCase
    other-extensions:
        OverloadedStrings
    ghc-options:
        -fhide-source-paths
        -Wall
        -Wextra
        -Wcompat
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Werror

library
    import:
        base-depends
    build-tool-depends:
        alex:alex   >= 3.2,
        happy:happy >= 1.20
    build-depends:
        -- array is needed specifically for Alex
        -- array                       >= 0.5.4,
        -- bytestring                  >= 0.10.12,
        -- containers                  >= 0.6.5,
        -- directory                   >= 0.10.12,
        -- filepath                    >= 1.4.2,
        -- llvm-hs                     >= 9.0.0,
        -- llvm-hs-pure                >= 9.0.0,
        -- mtl                         >= 2.2.2,
        -- optparse-applicative        >= 0.17.0,
        -- prettyprinter               >= 1.7.1,
        -- prettyprinter-ansi-terminal >= 1.1.3
    exposed-modules:
        Mu
    hs-source-dirs:
        src

executable mu-exe
    import:
        base-depends
    main-is:
        Main.hs
    other-modules:
    build-depends:
        mu      >= 0.1.0.0
    hs-source-dirs:
        app

common test-depends
    import:
        base-depends
    hs-source-dirs:
        app,
        test
    build-depends:
        HUnit

test-suite mu-test
    import:
        test-depends
    type:
        exitcode-stdio-1.0
    main-is:
        Test.hs
